# apex-efast-openeo

./: .gitignore  process_graph.json  pyproject.toml
notebooks/: apply_neighborhood_changes_input.ipynb  cloud_size_changes_with_distance_score_computation.ipynb  create_and_run_efast_udp.ipynb
src/efast_openeo/: constants.py  data_loading.py  define_udp.py  efast.py  main.py  smoothing.py
src/efast_openeo/algorithms/: distance_to_cloud.py  fusion.py  temporal_interpolation.py  weighted_composite.py
src/efast_openeo/algorithms/udf/: udf_distance_transform.py  udf_distance_transform_with_band.py  udf_fusion.py  udf_temporal_interpolation.py  udf_temporal_score_aggregate.py  udf_temporal_score_mock.py  udf_temporal_score_single.py
src/efast_openeo/data/: process-description.md
src/efast_openeo/util/: log.py
tests/: conftest.py  test_composite.py  test_distance_to_cloud.py  test_distance_to_cloud_s2.py  test_distance_to_cloud_s3.py  test_fusion.py  test_s3_cloud_mask.py  test_temporal_resampling.py  test_temporal_score.py  test_time_series_interface.py  test_udf_composite.py  test_udf_fusion.py  test_udf_temporal_interpolation.py  test_udp_from_pg_json.py
tests/bug_reproducers/: aggregate_temporal_with_udf.py  apply_neighborhood_shifts.py  manual_time_dimension.py  merge_cubes_invents_time_stamps.py  resample_cube_spatial_copies_the_wrong_bands.py
utils/: create_udp.py  fetch_results.py
